Fix join text on tablet-up

--- a/_sass/components/_home.scss
+++ b/_sass/components/_home.scss
@@ -406,9 +406,17 @@
     margin-bottom: 0;
   }
 
+  &--desktop-only {
+    display: none;
+  }
+
   @media #{$bp-tablet-up} {
     &--sub {
       font-size: 20px;
+    }
+
+    &--desktop-only {
+      display: revert;
     }
   }
 }
